[package]
name = "sphinx-use-state"
version = "0.0.1"
edition = "2021"
description = "Helper proc macro for Sphinx"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/Nigecat/Sphinx"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
